[project]
name = "nbagamegraphs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=2.18.2",
    "dash-cytoscape>=1.0.2",
    "ipykernel>=6.29.5",
    "joblib>=1.4.2",
    "jupyter>=1.1.1",
    "nba-api>=1.7",
    "pandas>=2.2.3",
    "polars>=1.19.0",
    "pyarrow>=18.1.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
